# robot_arm_calibration

./: .gitignore  README.md  ROS常用命令.md  frames.gv
data/: camera_pose_calibration_result.launch  camera_pose_calibration_result_2.launch  res  samples.yaml  samples_2.yaml
src/fr5_real_moveit/: CMakeLists.txt  package.xml
src/fr5_real_moveit/config/: calibration_rviz_config.rviz  easy_handeye_calibration.rviz  fake_controllers.yaml  fr5_robot.srdf  planning_context.launch  robot_init.rviz  ros_controllers.yaml  rviz_calibration_config.rviz
src/fr5_real_moveit/include/frcobot_camera/: FRRobot.h
src/fr5_real_moveit/include/frcobot_gripper/: FRRobot.h
src/fr5_real_moveit/include/frcobot_hw/: FRRobot.h
src/fr5_real_moveit/include/frrobot_control/: FRRobot.h
src/fr5_real_moveit/launch/: bringup.launch  demo.launch  demo_hardware.launch  fr5_real_moveit_moveit_controller_manager.launch.xml  fr5robot_rviz.launch  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
src/fr5_real_moveit/launch/inc/: fr5_control.launch.xml  fr_common.launch  load_fr.launch.xml  load_fr5.launch.xml
src/fr5_real_moveit/scripts/: 01_debug_camera.py  02_debug_camera_live.py  03_hand_move_get_arm_camera_pose_pair.py  test.py
src/fr5_real_moveit/scripts/robot/: ArmRobot.py  CommonParam.py  FRArmRobot.py  Robot.py  __init__.py
src/fr5_real_moveit/scripts/sdk/frcobot_python_sdk-main/linux/example/: circle.py  force_compliance.py  force_control.py  force_find_surface_calcenter.py  force_guard.py  force_payload_identify.py  io_interface.py  jog.py  movec.py  movej.py  movel.py  points_offset.py  robot_basic_interface.py  robot_common_set.py  servocart.py  servoj.py  spline.py  tpd_record.py  webapp_program_use_interface.py
src/fr5_real_moveit/scripts/sdk/frcobot_python_sdk-main/windows/example/: force_compliance.py  force_control.py  force_find_surface_calcenter.py  force_guard.py  force_payload_identify.py  force_sensor_set.py  force_spiral_rot_line_insertion.py  get_robot_data.py  jog.py  movec.py  movecart.py  movel.py  new_spiral.py  new_spline.py  points_offset.py  robot_basic_interface.py  robot_external_device.py  robot_safety_set.py  servoj.py  spline.py  tpd_record.py  tpd_repetition.py
src/fr5_real_moveit/src/: fr5_joint_states_pub.cpp  fr5_query_state_and_pub.cpp  fr_driver.cpp
src/fr5_real_moveit/urdf/: fr5_robot.gv  fr5_robot.urdf
src/publish_hand_eye_tf/: CMakeLists.txt  package.xml
src/publish_hand_eye_tf/cfg/: SetTFOffset.cfg
src/publish_hand_eye_tf/launch/: publish_hand_eye_tf.launch
src/publish_hand_eye_tf/scripts/: pub_camera_TF.py
src/ros_astra_camera/camera_info/: 0.yaml
src/ros_astra_camera/launch/: gemini.launch
src/ros_control_boilerplate/frrobot_control/: CMakeLists.txt
src/ros_control_boilerplate/frrobot_control/include/frrobot_control/: FRRobot.h
src/ros_control_boilerplate/frrobot_control/launch/: fr5_hardware.launch  fr5_simulation.launch
src/ros_control_boilerplate/frrobot_control/src/: frrobot_hw_interface.cpp
src/verify_calibration/: CMakeLists.txt  README.md  package.xml
src/verify_calibration/launch/: ar_test.launch  verify_calibration.launch
src/verify_calibration/rviz/: ar_tag_pick.rviz
src/verify_calibration/scripts/: verify_calibration.py  verify_calibration_server.py
src/verify_calibration/src/: moveit_pose_demo.cpp  verify_calibration_server.cpp
